// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthShell (snapshot) > matches default snapshot 1`] = `
<div>
  <div
    class="relative z-10 flex min-h-screen flex-col items-center justify-center px-6 py-12"
  >
    <div
      class="rounded-xl border border-border bg-card text-card-foreground w-full shadow-lg shadow-black/5 dark:shadow-black/30 max-w-[408px]"
      data-slot="card"
    >
      <div
        class="flex flex-col space-y-1.5 p-6 text-center pb-3"
      >
        <h1
          class="text-xl font-semibold tracking-tight"
        >
          Sign in
        </h1>
        <p
          class="mt-1.5 text-sm text-muted-foreground"
        >
          Welcome back
        </p>
      </div>
      <div
        class="p-6 pt-0"
      >
        <div>
          Body
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthShell (snapshot) > matches wide-with-brand-and-footer snapshot 1`] = `
<div>
  <div
    class="relative z-10 flex min-h-screen flex-col items-center justify-center px-6 py-12"
  >
    <div
      class="mb-7"
    >
      <div
        data-testid="brand"
      >
        Client Brand
      </div>
    </div>
    <div
      class="rounded-xl border border-border bg-card text-card-foreground w-full shadow-lg shadow-black/5 dark:shadow-black/30 max-w-[460px]"
      data-slot="card"
    >
      <div
        class="flex flex-col space-y-1.5 p-6 text-center pb-4"
      >
        <h1
          class="text-xl font-semibold tracking-tight"
        >
          Authorize access
        </h1>
      </div>
      <div
        class="p-6 pt-0"
      >
        <div>
          Body
        </div>
      </div>
    </div>
    <div
      class="mt-6 max-w-[460px] text-center text-xs text-muted-foreground"
    >
      <span>
        Privacy · Terms
      </span>
    </div>
  </div>
</div>
`;
